--- a/app/views/coins/show.html.erb
+++ b/app/views/coins/show.html.erb
@@ -11,8 +11,8 @@
 </p>
 
 <p>
-  <strong>Url image:</strong>
-  <%= @coin.url_image %>
+  <strong>Image:</strong>
+  <td><%= image_tag @coin.url_image, size:"25x25" %></td>
 </p>
 
 <%= link_to 'Edit', edit_coin_path(@coin) %> |
