Add mining types link into home index view

--- a/app/views/home/_menu.html.erb
+++ b/app/views/home/_menu.html.erb
@@ -1,1 +1,8 @@
-<%= link_to "Coins", coins_path %>
+<ul>
+  <li>
+    <%= link_to "Coins", coins_path %>
+  </li>
+  <li>
+    <%= link_to "Mining types", mining_types_path %>
+  </li>
+</ul>
