--- a/app/views/coins/_form.html.erb
+++ b/app/views/coins/_form.html.erb
@@ -26,6 +26,11 @@
     <%= form.text_field :url_image %>
   </div>
 
+  <div class="field">
+    <%= form.label :mining_types %>
+    <%= form.select('mining_type_id', @mining_types) %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
