--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -10,6 +10,7 @@
   </head>
   <h1>ADMIN HEADER</h1>
   <body>
+    <%= link_to 'Home', root_path %>
     <%= yield %>
   </body>
   <h1>ADMIN FOOTER</h1>
