--- a/app/views/coins/_form.html.erb
+++ b/app/views/coins/_form.html.erb
@@ -12,26 +12,26 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :description %>
+    <%= form.label t('coin_attributes.description') %>
     <%= form.text_field :description %>
   </div>
 
   <div class="field">
-    <%= form.label :acronym %>
+    <%= form.label t('coin_attributes.acronym') %>
     <%= form.text_field :acronym %>
   </div>
 
   <div class="field">
-    <%= form.label :url_image %>
+    <%= form.label t('coin_attributes.image') %>
     <%= form.text_field :url_image %>
   </div>
 
   <div class="field">
-    <%= form.label :mining_types %>
+    <%= form.label t('coin_attributes.mining_type') %>
     <%= form.select('mining_type_id', @mining_types) %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit t('links.update')%>
   </div>
 <% end %>
