--- a/app/views/coins/index.html.erb
+++ b/app/views/coins/index.html.erb
@@ -1,14 +1,14 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Coins</h1>
+<h1><%= t('coins') %></h1>
 
 <table>
   <thead>
     <tr>
-      <th>Description</th>
-      <th>Acronym</th>
-      <th>Image</th>
-      <th>Mining type</th>
+      <th><%= t('coin_attributes.description') %></th>
+      <th><%= t('coin_attributes.acronym') %></th>
+      <th><%= t('coin_attributes.image') %></th>
+      <th><%= t('coin_attributes.mining_type') %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,9 +20,9 @@
         <td><%= coin.acronym %></td>
         <td><%= image_tag coin.url_image, size:"25x25" %></td>
         <td><%= coin.mining_type.description %></td>
-        <td><%= link_to 'Show', coin %></td>
-        <td><%= link_to 'Edit', edit_coin_path(coin) %></td>
-        <td><%= link_to 'Destroy', coin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to t('links.show'), coin %></td>
+        <td><%= link_to t('links.edit'), edit_coin_path(coin) %></td>
+        <td><%= link_to t('links.delete'), coin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -30,4 +30,4 @@
 
 <br>
 
-<%= link_to 'New Coin', new_coin_path %>
+<%= link_to t('links.new'), new_coin_path %>
