--- a/app/views/home/_menu.html.erb
+++ b/app/views/home/_menu.html.erb
@@ -1,8 +1,8 @@
 <ul>
   <li>
-    <%= link_to "Coins", coins_path %>
+    <%= link_to t('coins'), coins_path %>
   </li>
   <li>
-    <%= link_to "Mining types", mining_types_path %>
+    <%= link_to t('mining_types'), mining_types_path %>
   </li>
 </ul>
