--- a/app/views/coins/index.html.erb
+++ b/app/views/coins/index.html.erb
@@ -5,10 +5,10 @@
 <table>
   <thead>
     <tr>
-      <th><%= t('coin_attributes.description') %></th>
-      <th><%= t('coin_attributes.acronym') %></th>
-      <th><%= t('coin_attributes.image') %></th>
-      <th><%= t('coin_attributes.mining_type') %></th>
+      <th><%= @coins.human_attribute_name(:description) %></th>
+      <th><%= @coins.human_attribute_name(:acronym) %></th>
+      <th><%= @coins.human_attribute_name(:image) %></th>
+      <th><%= @coins.human_attribute_name(:mining_type) %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
