Refacture mining type views translation fields

--- a/app/views/mining_types/_form.html.erb
+++ b/app/views/mining_types/_form.html.erb
@@ -12,12 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= form.label t('mining_types_attributes.description') %>
+    <%= form.label :description %>
     <%= form.text_field :description %>
   </div>
 
   <div class="field">
-    <%= form.label t('mining_types_attributes.acronym') %>
+    <%= form.label :acronym %>
     <%= form.text_field :acronym %>
   </div>
 
