--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <h1><%= t('header') %></h1>
+  <h3><%= link_to 'English', root_path(locale: 'en') %></h3>
+  <h3><%= link_to 'Português (Brasil)', root_path(locale: 'pt-BR') %></h3>
   <body>
     <%= yield %>
   </body>
