--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     <%= javascript_include_tag params[:controller], 'data-turbolinks-track': 'reload' %>
   </head>
   <h1><%= t('header') %></h1>
+  <p>with scaffolds.css</p>
   <h3><%= link_to 'English', root_path(locale: 'en') %></h3>
   <h3><%= link_to 'Português (Brasil)', root_path(locale: 'pt-BR') %></h3>
   <body>
