Remove unused backgrounds changes

--- a/app/assets/stylesheets/scaffolds.scss.erb
+++ b/app/assets/stylesheets/scaffolds.scss.erb
@@ -1,6 +1,5 @@
 body {
-  background-color: <%= Rails.env.development? ? '#8B0000' : 'grey' %>;
-  background-image: asset_url('rails.png');
+  background-color: fff;
   color: #333;
   margin: 33px;
   font-family: verdana, arial, helvetica, sans-serif;
@@ -8,7 +7,10 @@ body {
   line-height: 18px;
 }
 
-p, ol, ul, td {
+p,
+ol,
+ul,
+td {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
@@ -42,7 +44,8 @@ td {
 }
 
 div {
-  &.field, &.actions {
+  &.field,
+  &.actions {
     margin-bottom: 10px;
   }
 }
