--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -13,6 +13,5 @@
 //= require rails-ujs
 //= require activestorage
 //= require turbolinks
-
-<% msg = Time.now.hour <= 12 ? 'Good morning' : 'Hello' %>
-alert('<%= msg %>');
+//= require jquery
+//= require notify-js-legacy/notify
