Move fields to body tag and add notify message

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,12 +12,14 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag params[:controller], 'data-turbolinks-track': 'reload' %>
   </head>
-  <h1><%= t('header') %></h1>
-  <p>with scaffolds.css</p>
-  <h3><%= link_to 'English', root_path(locale: 'en') %></h3>
-  <h3><%= link_to 'Português (Brasil)', root_path(locale: 'pt-BR') %></h3>
   <body>
+    <h1><%= t('header') %></h1>
+    <p>with scaffolds.css</p>
+    <h3><%= link_to 'English', root_path(locale: 'en') %></h3>
+    <h3><%= link_to 'Português (Brasil)', root_path(locale: 'pt-BR') %></h3>
     <%= yield %>
+
+    <script>$.notify("Access granted", "success");</script>
   </body>
   <h1><%= t('footer') %></h1>
 </html>
