--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <div class="jumbotron">
-  <h1 class="display-4">Welcome!</h1>
-  <p class="lead">This is a simple application where you can manage your crypto coins.</p>
+  <h1 class="display-4"><%= t('welcome') %>!</h1>
+  <p class="lead"><%= t('messages.home.description') %></p>
   <hr class="my-4">
-  <p>To start, select:</p>
+  <p><%= t('messages.home.menu') %>:</p>
   <%= render 'menu' %>
 </div>
