--- a/app/views/coins/edit.html.erb
+++ b/app/views/coins/edit.html.erb
@@ -1,6 +1,6 @@
-<h1><%= t('editing_coin') %></h1>
+<h1><%= t('edit.coin') %></h1>
 
 <%= render 'form', coin: @coin %>
 
-<%= link_to t('links.show'), @coin %> |
-<%= link_to t('links.back'), coins_path %>
+<%= link_to t('links.show'), @coin, class: 'btn btn-primary' %> |
+<%= link_to t('links.back'), coins_path, class: 'btn btn-primary' %>
