--- a/app/views/coins/index.html.erb
+++ b/app/views/coins/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1><%= t('coins') %></h1>
+<h1><%= Coin.model_name.human(count: @coins.count) %></h1>
 
 <table class='table table-hover'>
   <thead>
@@ -22,7 +22,7 @@
         <td><%= coin.mining_type.description %></td>
         <td><%= link_to t('links.show'), coin %></td>
         <td><%= link_to t('links.edit'), edit_coin_path(coin) %></td>
-        <td><%= link_to t('links.delete'), coin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to t('links.delete'), coin, method: :delete, data: { confirm: t('messages.confirm') } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -30,4 +30,4 @@
 
 <br>
 
-<%= link_to t('links.new'), new_coin_path %>
+<%= link_to t('new.coin'), new_coin_path, class: "btn btn-primary" %>
