--- a/app/views/coins/show.html.erb
+++ b/app/views/coins/show.html.erb
@@ -1,24 +1,24 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong><%= @coin.class.human_attribute_name(:description) %>:</strong>
-  <%= @coin.description %>
-</p>
+<form>
+  <div class="form-group">
+    <%= label_tag nil,  @coin.class.human_attribute_name(:description) %>
+    <%= text_field_tag nil, @coin.description, class: 'form-control', disabled: true %>
+  </div>
+  <div class="form-group">
+    <%= label_tag nil,  @coin.class.human_attribute_name(:acronym) %>
+    <%= text_field_tag nil, @coin.description, class: 'form-control', disabled: true %>
+  </div>
+  <div class="form-group">
+    <%= label_tag nil,  @coin.class.human_attribute_name(:image) %>
+    <%= image_tag @coin.url_image, size:"25x25" %>
+  </div>
+  <div class="form-group">
+    <%= label_tag nil,  @coin.class.human_attribute_name(:mining_type) %>
+    <%= text_field_tag nil, @coin.mining_type.description, class: 'form-control', disabled: true %>
+  </div>
 
-<p>
-  <strong><%= @coin.class.human_attribute_name(:acronym) %>:</strong>
-  <%= @coin.acronym %>
-</p>
+</form>
 
-<p>
-  <strong><%= @coin.class.human_attribute_name(:image) %>:</strong>
-  <td><%= image_tag @coin.url_image, size:"25x25" %></td>
-</p>
-
-<p>
-  <strong><%= @coin.class.human_attribute_name(:mining_type) %>:</strong>
-  <td><%= @coin.mining_type.description %></td>
-</p>
-
-<%= link_to t('links.edit'), edit_coin_path(@coin) %> |
-<%= link_to t('links.back'), coins_path %>
+<%= link_to t('links.edit'), edit_coin_path(@coin), class: 'btn btn-primary' %> |
+<%= link_to t('links.back'), coins_path, class: 'btn btn-primary' %>
