--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,10 +15,13 @@
     <div class='container'>
       <ul class="nav justify-content-end">
         <li class="nav-item">
-          <a><%= link_to 'English', root_path(locale: 'en'), class: "nav-link active" %></a>
+          <a><%= link_to 'Home', root_path, class: "nav-link active" %></a>
         </li>
         <li class="nav-item">
-          <a><%= link_to 'Português (Brasil)', root_path(locale: 'pt-BR'), class: "nav-link" %></a>
+          <a><%= link_to 'English', url_for(locale: 'en'), class: "nav-link active" %></a>
+        </li>
+        <li class="nav-item">
+          <a><%= link_to 'Português (Brasil)', url_for(locale: 'pt-BR'), class: "nav-link" %></a>
         </li>
       </ul>
       <%= yield %>
